# docktari

./: README.md  eslint.config.js  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/containers/: exec.rs  exec_once.rs  exists.rs  inspect.rs  list.rs  mod.rs  pause.rs  remove.rs  save_file.rs  start.rs  stop.rs  stream_logs.rs
src-tauri/src/commands/images/: inspect.rs  list.rs  mod.rs  remove.rs
src-tauri/src/commands/networks/: inspect.rs  list.rs  remove.rs
src-tauri/src/commands/system/: mod.rs  version.rs
src-tauri/src/commands/volumes/: inspect.rs  list.rs  mod.rs  prune.rs  reemove.rs
src-tauri/src/util/: decompress.rs  inflate.rs  mod.rs
src/components/: DataError.jsx  DataTable.jsx  DataTableTabs.jsx  Drawer.jsx  DrawerNavItem.css  DrawerNavItem.jsx  FileViewer.jsx  Inspect.jsx  InspectViewer.jsx  LogViewer.jsx  Terminal.jsx  XTerinal.jsx
src/components/icons/: ContainerIcon.jsx  DeleteIcon.jsx  FilterIcon.jsx  HomeIcon.jsx  ImageIcon.jsx  NetworkIcon.jsx  PauseIcon.jsx  RefreshIcon.jsx  StartIcon.jsx  StopIcon.jsx  UnpauseIcon.jsx  VolumeIcon.jsx
src/data/: loaders.js  utils.js
src/routes/: containers.jsx  home.jsx  images.jsx  networks.jsx  root.jsx  term.jsx  volumes.jsx
src/state/: SettingsStore.jsx
