[package]
name = "docktari"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "docktari_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bollard = "0.17"
bytes = "1.8.0"
bzip2 = "0.4.4"
flate2 = "1.0.34"
futures-util = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4.43"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-websocket = "2"
tokio = { version = "1", features = ["sync"] }
xz2 = "0.1.7"
